--- a/index.html
+++ b/index.html
@@ -208,12 +208,12 @@
                         <p>Ut et congue augue. Maecenas fermentum vel ante a aliquam. Etiam viverra maximus</p>
                     </div>
                     <div class="singleMoreBlock">
-                        <img src="image/More2.jpg" alt="">
+                        <img src="image/more2.jpg" alt="">
                         <h1>PROJECT DEADLINE</h1>
                         <p>Ut et congue augue. Maecenas fermentum vel ante a aliquam. Etiam viverra maximus</p>
                     </div>
                     <div class="singleMoreBlock">
-                        <img src="image/More3.jpg" alt="">
+                        <img src="image/more3.jpg" alt="">
                         <h1>CONSTRUCTION ACTIVITY</h1>
                         <p>Ut et congue augue. Maecenas fermentum vel ante a aliquam. Etiam viverra maximus</p>
                     </div>
